--- a/MumChaApp/templates/login.html
+++ b/MumChaApp/templates/login.html
@@ -19,7 +19,17 @@
   </head>
 
   <body>
-
+    <section class="page-section login">
+      <div class="container">
+          <!-- <img src="/static/img/.png" alt=""> -->
+          <form action="/MumlaChat/login/" id="login_form" method = 'post'>
+              {% csrf_token %}
+              {{login_form}}
+              <input type="submit" value="login">
+          </form>
+      </div>
+      <a href="registration/">新規登録</a>
+    </section>
   </body>
 
 </html>
