--- a/MumChaApp/templates/login.html
+++ b/MumChaApp/templates/login.html
@@ -28,7 +28,7 @@
               <input type="submit" value="login">
           </form>
       </div>
-      <a href="registration/">新規登録</a>
+      <a href="register/">新規登録</a>
     </section>
   </body>
 
