--- a/MumChaApp/templates/home.html
+++ b/MumChaApp/templates/home.html
@@ -27,7 +27,7 @@
       <div class="container">
         <ul class="">
           <li>{{tweet.post_date}}</li>
-          <li>{{tweet.img}}</li>
+          <li><img src = '../../media/{{tweet.image}}'></li>
           <li>{{tweet.content}}</li>   
         </ul>
       </div>
