投稿の表示順序を降順に変更

--- a/MumChaApp/templates/home.html
+++ b/MumChaApp/templates/home.html
@@ -26,6 +26,7 @@
       {% for tweet in tweet_list %}
       <div class="container">
         <ul class="">
+          <li>{{tweet.owner}}</li>
           <li>{{tweet.post_date}}</li>
           <li><img src = '../../media/{{tweet.image}}'></li>
           <li>{{tweet.content}}</li>   
