--- a/MumChaApp/templates/home.html
+++ b/MumChaApp/templates/home.html
@@ -45,5 +45,10 @@
       </div>
       {% endfor %}
     </main>
+    <footer>
+      <div class="foot-wrapper">
+        
+      </div>
+    </footer>
   </body>
 </html>
