--- a/MumChaApp/static/css/home.css
+++ b/MumChaApp/static/css/home.css
@@ -29,4 +29,81 @@
 
 .tweet-contents img{
   width: 100%;
+  border-radius: 30px;
+}
+
+main .container {
+  padding: 0 30px;
+  border-bottom: 2px solid rgb(239, 243, 244);
+}
+
+main .home-head {
+  padding: 20px 30px 30px 30px;
+}
+
+main .home-tweet {
+  padding: 25px 30px;
+  display: flex;
+}
+
+.home-tweet .login-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+}
+
+.home-tweet form {
+  margin-left: 30px;
+  width: 100%;
+  border-bottom: 2px solid rgb(239, 243, 244);
+}
+
+.home-tweet form textarea {
+  font-size: 20px;
+  width: 100%;
+  height: 100px;
+  border: none;
+  border-bottom: 2px solid rgb(239, 243, 244);
+  resize: vertical;
+}
+
+.home-tweet form .button-menu {
+  display: flex;
+  width: 100%;
+  margin: 5px 0 8px 0;
+}
+
+.home-tweet form .button-menu .submit {
+  width: 100px;
+  padding: 5px;
+  background: #084cdf;
+  color: #fff;
+  border-radius: 30px;
+  margin-left: auto;
+  border: none;
+  font-weight: bold;
+}
+
+.home-tweet form .button-menu .submit:hover {
+  background: #0d45a5;
+}
+
+input[type=file] {
+  width: 350px;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #084cdf;
+  padding: 5px 10px;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+  font-weight: bold;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: #0d45a5;
 }
